

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context="com.example.mehrbod.pepperremote.MainActivity"
        tools:ignore="overdraw" >

        <!--
             The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc.
        -->

        <LinearLayout
            android:id="@+id/devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txtDevicesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_list_header"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDeviceIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/device_connect_ip_default"
                android:textColor="@color/text"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_connect"/>

            <TextView
                android:id="@+id/txtInstruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/instruction"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:visibility="visible"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/controler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent,nestedWeights" >

                <CheckBox
                    android:id="@+id/chkDeviceUseOrientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_use_orientation"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/move_speed"/>

                    <SeekBar
                        android:id="@+id/skbSpeed"
                        android:progress="50"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txtSensorLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sensor_left"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSensorRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sensor_right"
                        android:textColor="@color/text"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/empty" />

                    <ImageButton
                        android:id="@+id/btnUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/empty"
                        android:contentDescription="@string/button_up"
                        android:scaleType="fitCenter"
                        android:src="@drawable/arrow_up" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/empty" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/btnLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/empty"
                        android:contentDescription="@string/button_left"
                        android:scaleType="fitCenter"
                        android:src="@drawable/arrow_left" />

                    <ImageButton
                        android:id="@+id/btnStop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/empty"
                        android:contentDescription="@string/img_description"
                        android:scaleType="centerInside"
                        android:src="@drawable/stop" />

                    <ImageButton
                        android:id="@+id/btnRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/empty"
                        android:contentDescription="@string/button_right"
                        android:scaleType="fitCenter"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/empty" />

                    <ImageButton
                        android:id="@+id/btnDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/empty"
                        android:contentDescription="@string/button_down"
                        android:cropToPadding="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/arrow_down" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_description"
                        android:src="@drawable/empty" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <!--
             This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows.
        -->

    </FrameLayout>